<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/content_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.solace.psg.nram.androidsimplesensorclient.MainActivity"
    >

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Name"/>

    <EditText
        android:id="@+id/inName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:layout_below="@+id/textName"
        android:layout_toRightOf="@+id/textName"
        android:layout_toEndOf="@+id/textName"/>

    <TextView
        android:id="@+id/textID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID/Email"
        android:layout_below="@+id/inName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/inID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/id"
        android:layout_below="@+id/inName"
        android:layout_alignLeft="@+id/inName"
        android:layout_alignStart="@+id/inName"
        android:layout_marginTop="13dp"/>

    <TextView
        android:id="@+id/textURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MQTT Broker URL"
        android:layout_below="@+id/inID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/inURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/mqtt_broker_url"
        android:layout_below="@+id/textURL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textClientname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MQTT ClientName"
        android:layout_below="@+id/inURL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/inClientname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/mqtt_client_username"
        android:layout_below="@+id/textClientname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/inCientPassword"/>

    <TextView
        android:id="@+id/textClientPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:layout_below="@+id/inURL"
        android:layout_toRightOf="@+id/inClientname"
        android:layout_toEndOf="@+id/inClientname"/>

    <EditText
        android:id="@+id/inCientPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/mqtt_client_password"
        android:layout_alignBaseline="@+id/inClientname"
        android:layout_alignBottom="@+id/inClientname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/btnReset"
        android:layout_toEndOf="@+id/btnReset"/>

    <Button
        android:id="@+id/btnConnect"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textClientPassword"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textClientPassword"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/colorPrimary"
        android:text="Connect"/>

    <Button
        android:id="@+id/btnQuit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textClientPassword"
        android:layout_toRightOf="@+id/textClientPassword"
        android:background="@color/colorPrimary"
        android:text="Quit"/>

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inCientPassword"
        android:layout_marginTop="26dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:text="Verify the info and click Connect"/>

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnConnect"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textStatus"
        android:scrollbars="vertical"
        android:maxLines="10"
        android:text="Waiting ..."/>

    <TextView
        android:id="@+id/textQos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="QoS"
        android:layout_below="@+id/inID"
        android:layout_alignLeft="@+id/inQoS"
        android:layout_alignStart="@+id/inQoS"/>

    <TextView
        android:id="@+id/inQoS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textClientPassword"
        android:layout_alignLeft="@+id/btnQuit"
        android:layout_alignStart="@+id/btnQuit"
        android:layout_below="@+id/textQos"
        android:text="0"/>

</RelativeLayout>

    <!--
    TODO: where are text edit views? FIX
    -->
